Improved game structure and Documentation

--- a/Documentation/Documentation.tex
+++ b/Documentation/Documentation.tex
@@ -79,14 +79,13 @@ Zur Ein- und Ausgabe erhalten Sie eine Klasse mit zwei Methoden:
     \item Implementierungsvorgaben:
         \newline - Eine generische Klasse
         \newline - Drei davon abgeleitete Klassen (Spieler, Hintergrund, Gegner/NPC)
-        \newline - Eine Klasse für die Score Manipulierung
 \end{itemize}
 \newpage
 
 \section{Idee}
 \textbf{Name:}
 \newline
-SS - Schiff Simulator
+MP - Mari proelium
 \newline
 \textbf{Spiel:}
 \newline
@@ -138,6 +137,15 @@ Die Steuerung wird auf die vier verfügbaren Tasten aufgeteilt, sodass man ohne 
     \item \textbf{Highscore}
         \newline
         Punkte werden in der Konsole als Highscore nach jedem Tod des Spielers ausgegeben
+\end{itemize}
+\newpage
+
+\section{Projektablauf}
+\begin{itemize}
+    \item \textbf{Vorbereitung}
+        \newline
+    \item \textbf{Spielablauf}
+        \newline
 \end{itemize}
 \newpage
 
