--- a/Documentation/Documentation.tex
+++ b/Documentation/Documentation.tex
@@ -183,4 +183,7 @@ Die Steuerung wird auf die vier verfügbaren Tasten aufgeteilt, sodass man ohne 
 \newpage
 \textbf{World.java}
 \lstinputlisting{../Game/src/de/thdeg/assets/World.java}
+\newpage
+\textbf{Score.java}
+\lstinputlisting{../Game/src/de/thdeg/assets/Score.java}
 \end{document}
