--- a/Documentation/Documentation.tex
+++ b/Documentation/Documentation.tex
@@ -39,7 +39,7 @@
 
 % Define variables for the "\maketitle" command
 \title{Leistungsnachweis im Fach Programmierung 1}
-\date{2020-12-07}
+\date{2020-12-07 - 2020-01-17}
 \author{Maximilian von Hohenbühel \\ Fabian Cieslik}
 % Define the glossary
 \makeglossaries
