--- a/Documentation/Documentation.tex
+++ b/Documentation/Documentation.tex
@@ -152,6 +152,11 @@ Die Steuerung wird auf die vier verfügbaren Tasten aufgeteilt, sodass man ohne 
 \newpage
 
 \section{Klassendiagramm}
+\newline
+\textbf{Hier sehen Sie einen groben Ausschnitt des Klassendiagramms der die Vererbung der Klassen darstellt. Die ausführliche Version des Klassendiagramms können Sie im \textit{Documentation} Ordner finden.}
+\newline
+
+\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{./images/Rough_UML.png}
 \newpage
 \section{Programmcode}
 \textbf{Ship.java}
