--- a/Documentation/Documentation.tex
+++ b/Documentation/Documentation.tex
@@ -9,6 +9,7 @@
 \usepackage{import}
 \usepackage{hyperref}
 \usepackage[toc]{glossaries}
+\usepackage{pdfpages}
 \usepackage{graphicx}
 \usepackage{listings}
 \usepackage{color}
@@ -191,7 +192,7 @@ Die Steuerung wird auf die vier verfügbaren Tasten aufgeteilt, sodass man ohne 
 \end{itemize}
 \newpage
 \section{Arbeitsaufteilung}
-
+\includepdf[pages=-,landscape=true]{./Stundenliste - Stundenliste.pdf}
 \newpage
 \section{Klassendiagramm}
 Das Diagramm stellt einen groben Ausschnitt des Klassendiagramms, inklusive der Vererbung der Klassen, dar. Die ausführliche Version des Klassendiagramms befindet sich im \textit{Documentation} Ordner.
