--- a/Documentation/Documentation.tex
+++ b/Documentation/Documentation.tex
@@ -9,6 +9,7 @@
 \usepackage{import}
 \usepackage{hyperref}
 \usepackage[toc]{glossaries}
+\usepackage{lscape}
 \usepackage{pdfpages}
 \usepackage{graphicx}
 \usepackage{listings}
@@ -191,7 +192,6 @@ Die Steuerung wird auf die vier verfügbaren Tasten aufgeteilt, sodass man ohne 
         Zuerst wird der Spieler bewegt und auf Kollisionen überprüft, danach die Gegner. Anschließend wird überprüft ob man eine Runde überlebt hat und falls ja werden die Punkte zugewiesen und neue Gegner erstellt. Alle drei Runden wird das Spiel schwerer und die Positionen der Inseln neu gewählt.
 \end{itemize}
 \newpage
-
 \includepdf[pages=1,landscape=true]{./Stundenliste - Stundenliste.pdf}
 \newpage
 \section{Klassendiagramm}
@@ -201,7 +201,14 @@ Das Diagramm stellt einen groben Ausschnitt des Klassendiagramms, inklusive der 
 \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{./images/Rough_UML.png}
 \newpage
 \section{Kommentare und Zusammenfassung}
-
+Das Programmieren eines Spiels bietet die Möglichkeit eine Vielzahl von Funktionen von Java anzuwenden,
+deswegen finde ich es gut den Einstieg ins Programmieren mit so einem Vielseitigen Projekt zu Beenden.
+Ich bin schon ein etwas erfahrener Programmierer und konnte dieses Projekt mit Leichtigkeit angehen,
+jedoch konnte ich bei meinem Teamkollegen beobachten, dass diese Aufgabe ein paar Level über den Fähigkeiten der Studenten,
+welche keine Programmiererfahrung haben, war.
+Dies kann man leicht auf die fehlenden Übungen im Unterricht zurückverfolgen und auch die fehlende Erklärung einer Heransgehensweise an so ein großes Projekt.
+Wir haben uns am Anfang für ein recht komplexes Spiel entschieden, basierend auf meiner Einschätzung dessen Komplexität.
+Im Nachhinein hätte ich ein einfacheres Projekt gewählt, da es an manchen Stellen eine Herausforderung war, solch ein Projekt Schritt für Schritt zu Erklären und einem Anfänger verständlich zu machen.
 \newpage
 \section{Programmcode}
 \textbf{Ship.java}
