Added commentary and stuff

--- a/Documentation/Documentation.tex
+++ b/Documentation/Documentation.tex
@@ -201,14 +201,41 @@ Das Diagramm stellt einen groben Ausschnitt des Klassendiagramms, inklusive der 
 \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{./images/Rough_UML.png}
 \newpage
 \section{Kommentare und Zusammenfassung}
-Das Programmieren eines Spiels bietet die Möglichkeit eine Vielzahl von Funktionen von Java anzuwenden,
-deswegen finde ich es gut den Einstieg ins Programmieren mit so einem Vielseitigen Projekt zu Beenden.
-Ich bin schon ein etwas erfahrener Programmierer und konnte dieses Projekt mit Leichtigkeit angehen,
-jedoch konnte ich bei meinem Teamkollegen beobachten, dass diese Aufgabe ein paar Level über den Fähigkeiten der Studenten,
-welche keine Programmiererfahrung haben, war.
-Dies kann man leicht auf die fehlenden Übungen im Unterricht zurückverfolgen und auch die fehlende Erklärung einer Heransgehensweise an so ein großes Projekt.
-Wir haben uns am Anfang für ein recht komplexes Spiel entschieden, basierend auf meiner Einschätzung dessen Komplexität.
-Im Nachhinein hätte ich ein einfacheres Projekt gewählt, da es an manchen Stellen eine Herausforderung war, solch ein Projekt Schritt für Schritt zu Erklären und einem Anfänger verständlich zu machen.
+
+Allgemein stellt das Programmieren eines Spiels ein ideales Ende des Moduls
+Programmieren 1 dar.  Die erlernten Programmierkenntnisse werden dabei
+optimal abgefragt und angewendet, dadurch werden auf vielseitige Art
+und Weise die Kenntnisse vertieft und erweitert.
+
+Ein wesentlicher Kritikpunkt der individuellen Gruppeneinteilung hat sich
+bei uns gezeigt. Ein Mitglied (Maximilian) ist ein bereits erfahrener bzw.
+sehr fortgeschrittener Programmierer in diversen Sprachen. Das andere
+Mitglied (Fabian) dagegen besitzt kaum Vorkenntnisse in diesem Bereich.
+Die Schwierigkeit lag also darin, ein Spiel zu finden was beiden Ansprüchen
+genügt, d.h. denjenigen ohne Kenntnisse nicht überfordert als auch
+denjenigen mit fortgeschrittenen Kenntnissen unterfordert. Dieses
+Ziel zu erreichen gelang leider gar nicht. Die Überforderung des Teammitglieds
+ohne Kenntnisse war deutlich zu erkennen. Dies führen wir beide auf die teils
+einseitigen und zu praxisfernen Übungen während des Semesters und das nicht
+optimale Einleiten der Herangehensweise eines Projekts zurück. Besser/effektiver
+wäre gewesen, mehrere kleinere Übungen zu jedem Teilgebiet und eine Vorlesung/ein
+Skript anzubieten, das einen roten Faden von Anfang bis Ende besitzt. Die Struktur
+der Vorlesung war ebenfalls nicht unbedingt von Vorteil. Diese sollte mehr Schritt
+für Schritt aufgebaut sein (z.B. sollten nicht Klassen vor Zugriffsmodifikatoren
+gelehrt werden). Dies hat teilweise für Verwirrung gesorgt und musste ausführlicher
+vom Teammitglied mit Kenntnissen erklärt werden. Insgesamt kann man sagen, dass
+wir ein einfacheres Spiel hätten wählen sollen, um die Herangehensweise an ein
+solches Projekt Schritt für Schritt erklären, genügend Zeit in die Erklärung
+des Stoffes investieren und die Wissens-/Kenntnislevel zu einem gewissen
+Teil aneinander anpassen zu können.
+
+Das Spiel betreffend sind wir durchaus zufrieden. Das Ergebnis hat uns
+letzten Endes sehr überrascht, da wir nicht gedacht hatten, dass ein so
+einfaches Spiel so Spaß machen kann. Insgesamt ist diese Idee, wie bereits
+beschrieben, eine tolle Endaufgabe im Modul Programmieren 1, benötigt aber hier
+und da etwas Feinschliff. Vor allem was die Gruppeneinteilung angeht, sollte man
+sich etwas mehr Gedanken machen, da der Unterschied der jeweiligen Level
+teilweise deutlich auseinander liegt.
 \newpage
 \section{Programmcode}
 \textbf{Ship.java}
