--- a/Documentation/Documentation.tex
+++ b/Documentation/Documentation.tex
@@ -192,8 +192,7 @@ Die Steuerung wird auf die vier verfügbaren Tasten aufgeteilt, sodass man ohne 
         Zuerst wird der Spieler bewegt und auf Kollisionen überprüft, danach die Gegner. Anschließend wird überprüft ob man eine Runde überlebt hat und falls ja werden die Punkte zugewiesen und neue Gegner erstellt. Alle drei Runden wird das Spiel schwerer und die Positionen der Inseln neu gewählt.
 \end{itemize}
 \newpage
-\section{Arbeitsaufteilung}
-\includepdf[pages=1,landscape=true]{./Stundenliste - Stundenliste.pdf}
+\includepdf[pages=1,landscape=true,pagecommand={\section{Arbeitsaufteilung}}]{./Stundenliste - Stundenliste.pdf}
 \newpage
 \section{Klassendiagramm}
 Das Diagramm stellt einen groben Ausschnitt des Klassendiagramms, inklusive der Vererbung der Klassen, dar. Die ausführliche Version des Klassendiagramms befindet sich im \textit{Documentation} Ordner.
